[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Fonts/z_40_o1.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/right.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/pause.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/fastForward.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/HPbar.jpg" type="Texture" id=11]
[ext_resource path="res://Assets/Icons/home.png" type="Texture" id=12]
[ext_resource path="res://Assets/Icons/information.png" type="Texture" id=13]
[ext_resource path="res://Assets/Audio/Music/Tactical Pursuit.mp3" type="AudioStream" id=16]
[ext_resource path="res://Assets/Audio/Music/2 Part Invention in B Minor.mp3" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 0.709804 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 0.709804 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 0.709804 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 0.709804 )
use_filter = true
font_data = ExtResource( 1 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -400.0
margin_right = 100.0
rect_min_size = Vector2( 100, 400 )
custom_constants/separation = 20

[node name="GameControls" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -90.0
margin_right = -20.0
margin_bottom = -20.0

[node name="PausePlay" type="TextureButton" parent="UI/HUD/GameControls"]
pause_mode = 2
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="SpeedUp" type="TextureButton" parent="UI/HUD/GameControls"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
expand = true

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color( 0, 0, 0, 0.470588 )
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="M" type="MarginContainer" parent="UI/HUD/InfoBar"]
margin_right = 1920.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 0

[node name="H" type="HBoxContainer" parent="UI/HUD/InfoBar/M"]
margin_left = 20.0
margin_right = 1900.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Symbol" type="Label" parent="UI/HUD/InfoBar/M/H"]
margin_right = 28.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "$"
align = 2
valign = 1

[node name="Money" type="Label" parent="UI/HUD/InfoBar/M/H"]
margin_left = 32.0
margin_right = 142.0
margin_bottom = 60.0
rect_min_size = Vector2( 110, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "99999"
align = 2
valign = 1

[node name="Tween" type="Tween" parent="UI/HUD/InfoBar/M/H/Money"]

[node name="WaveWrapper" type="Control" parent="UI/HUD/InfoBar/M/H"]
visible = false
margin_left = 238.0
margin_right = 238.0
margin_bottom = 60.0

[node name="WaveLabel" type="Label" parent="UI/HUD/InfoBar/M/H/WaveWrapper"]
margin_left = 4.0
margin_right = 204.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Wave"
align = 2
valign = 1

[node name="Wave" type="Label" parent="UI/HUD/InfoBar/M/H/WaveWrapper"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "999"
align = 1
valign = 1

[node name="RemainingIcon" type="TextureRect" parent="UI/HUD/InfoBar/M/H/WaveWrapper"]
margin_left = 404.0
margin_right = 464.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 10
texture = ExtResource( 13 )
expand = true

[node name="Remaining" type="Label" parent="UI/HUD/InfoBar/M/H/WaveWrapper"]
margin_left = 468.0
margin_right = 568.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "999"
align = 1
valign = 1

[node name="Sep" type="Control" parent="UI/HUD/InfoBar/M/H"]
margin_left = 146.0
margin_right = 216.0
margin_bottom = 60.0
rect_min_size = Vector2( 70, 0 )

[node name="HPWrapper" type="HBoxContainer" parent="UI/HUD/InfoBar/M/H"]
margin_left = 220.0
margin_right = 1880.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="UI/HUD/InfoBar/M/H/HPWrapper"]
margin_left = 1196.0
margin_right = 1256.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 10
texture = ExtResource( 12 )
expand = true

[node name="HP" type="TextureProgress" parent="UI/HUD/InfoBar/M/H/HPWrapper"]
margin_left = 1260.0
margin_top = 15.0
margin_right = 1660.0
margin_bottom = 45.0
rect_min_size = Vector2( 400, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 11 )
tint_under = Color( 0.211765, 0.203922, 0.203922, 1 )
tint_progress = Color( 0.207843, 1, 0.0156863, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="UI/HUD/InfoBar/M/H/HPWrapper/HP"]

[node name="UpgradeBar" type="HBoxContainer" parent="UI/HUD"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -95.0
margin_right = -200.0
margin_bottom = -15.0
rect_min_size = Vector2( 0, 60 )
alignment = 1

[node name="Tween" type="Tween" parent="."]

[node name="InterfaceEffects" type="AudioStreamPlayer" parent="."]

[node name="BackgroundMusicUpbeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "BackgroundMusic"

[node name="Tween" type="Tween" parent="BackgroundMusicUpbeat"]

[node name="BackgroundMusicIdle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
bus = "BackgroundMusic"

[node name="Tween" type="Tween" parent="BackgroundMusicIdle"]

[connection signal="pressed" from="UI/HUD/GameControls/PausePlay" to="UI" method="_on_PausePlay_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
[connection signal="tween_step" from="UI/HUD/InfoBar/M/H/Money/Tween" to="UI" method="_on_money_Tween_tween_step"]
[connection signal="tween_completed" from="BackgroundMusicUpbeat/Tween" to="." method="_on_bgmusicupbeat_tween_completed"]
[connection signal="tween_completed" from="BackgroundMusicIdle/Tween" to="." method="_on_bgmusicidle_tween_completed"]
